# cs_education

./: .gitignore  README.md  education.drawio  index.md  knowledge_base.db  langs_index.md  map.xmind  pyproject.toml
cli/: .dockerignore  Makefile  README.md  fixtures.json  knowledge_base.db  pyproject.toml  test.json
cli/alembic/: env.py
cli/alembic/versions/: 57081fca6e94_.py  75a7cdd476a2_.py  87128d0d47c3_.py  b8a2d1dc6461_.py
cli/docs/: interface.xmind
cli/education/: __main__.py  settings.py
cli/education/apps/bot/: server.py
cli/education/apps/material/: __init__.py
cli/education/apps/progress/: __init__.py  timer.py
cli/education/apps/quiz/: __init__.py  app.py
cli/education/apps/schedule/: __init__.py  app.py
cli/education/core/: application.py  db.py
cli/education/core/caldav/: __init__.py
cli/education/models/: __init__.py  course.py  handbook.py  lesson.py  material.py  materials.py  quiz.py  schedule.py
cli/education/utils/: convert_env.py
cli/fixtures/: content_type.json
education/: Makefile  README.md  education.py  knowledge_base.db  pyproject.toml
education/alembic/: env.py
education/alembic/versions/: 2fd4f00bf38e_.py
education/core/: __init__.py  db.py
education/docs/: interface.xmind  scheme.xmind
education/education/: __main__.py  settings.py  test.json
education/education/apps/: education.py
education/education/apps/bot/: __init__.py  server.py
education/education/apps/material/: __init__.py  exporter.py  importer.py  note.py
education/education/apps/plan/: __init__.py  progress.ipynb
education/education/apps/progress/: __init__.py  exporter.py  (+2 more)
education/education/core/: __init__.py  application.py  db.py  settings.py
education/education/models/: handbook.py  materials.py
education/models/: handbook.py  materials.py
education/serializers/: handbook.py  materials.py
education/src/apps/: education.py  material.py  plan.py
education/src/core/: application.py
education/src/serializers/: materials.py
(+19 files in other folders)
