[tool.poetry]
name = "education"
version = "0.1.0"
description = "Мой план обучения, все материалы и инструменты"
authors = ["Nikolay Baryshnikov <root@k0d.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
