[tool.poetry]
name = "cs_education"
version = "0.2.2"
description = "Моя карта обучения CS на 3 года"
authors = ["Nikolay Baryshnikov <root@k0d.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.17"
alembic = "^1.4.2"
click = "^7.1.2"
pydantic = "^1.5.1"
typer = "^0.2.1"
nbconvert = "^5.6.1"
notebook = "^6.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
